# gcal-cgi-app

./: .gitignore  CMakeLists.txt  README.md
etc/: example.cmd
src/: gcal.cpp
x64/: example.cmd
